# StarSea2

./: .gitignore  .gitmodules  meson.build  readme.md
include/: Arduino.h  Servo.h  SoftwareSerial.h  helper.h  integrator.h  parameters.h  robot_sim.h  robot_sim_arena.h  robot_sim_exposed.h  robot_sim_helper.h  robot_sim_kinematics.h  robot_sim_physics.h  solver.h  ss_parameters.h  state.h  state_gravN.h  state_orbit.h  state_robot.h  utils.h
include/emulate_includes/: Arduino.h
python/: gpuTest1.py  gpuTest2.py  imageGen.py  orbitComputes.py  starSea2.py  utils.py
src/: helper.cpp  integrator.cpp  robot_sim.cpp  robot_sim_arena.cpp  robot_sim_exposed.cpp  robot_sim_helper.cpp  robot_sim_kinematics.cpp  robot_sim_physics.cpp  solver.cpp  starsea2.cpp  state.cpp  state_gravN.cpp  state_orbit.cpp  state_robot.cpp  utils.cpp
subprojects/SDL2-2.28.5/: .meson-subproject-wrap-hash.txt
subprojects/SDL2_image-2.6.3/: .meson-subproject-wrap-hash.txt
